@@ -22,6 +22,8 @@ import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.enums.manageorders.DeliveryByEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.OtherOrganisationOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.SelectTypeOfOrderEnum;
+import uk.gov.hmcts.reform.prl.enums.manageorders.ServeOtherPartiesOptions;
+import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaSolicitorServingRespondentsEnum;
 import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.OrderDetails;
@@ -32,6 +34,8 @@ import uk.gov.hmcts.reform.prl.models.complextypes.Child;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.User;
 import uk.gov.hmcts.reform.prl.models.complextypes.manageorders.serveorders.EmailInformation;
+import uk.gov.hmcts.reform.prl.models.complextypes.manageorders.serveorders.PostalInformation;
+import uk.gov.hmcts.reform.prl.models.complextypes.manageorders.serveorders.ServeOrgDetails;
 import uk.gov.hmcts.reform.prl.models.court.Court;
 import uk.gov.hmcts.reform.prl.models.court.ServiceArea;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
@@ -61,14 +65,14 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
-
 
 @PropertySource(value = "classpath:application.yaml")
 @RunWith(MockitoJUnitRunner.Silent.class)
 public class ManageOrderEmailServiceTest {
-
     private static final String manageCaseUrl = null;
     public static final String authToken = "Bearer TestAuthToken";
     private static final String URGENT_CASE = "Urgent ";
@@ -648,341 +652,6 @@ public class ManageOrderEmailServiceTest {
     }
 
     @Test
-    public void sendEmailNotificationToCA_ApplicantAndRespondents() {
-        applicant = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .email("applicant@tests.com")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        respondent = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .email("respondent@tests.com")
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().value(applicant).build();
-        List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
-
-        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().value(respondent).build();
-        List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
-
-        List<LiveWithEnum> childLiveWithList = new ArrayList<>();
-        childLiveWithList.add(LiveWithEnum.applicant);
-
-        Child child = Child.builder()
-            .childLiveWith(childLiveWithList)
-            .build();
-
-        String childNames = "child1 child2";
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .applicantCaseName("TestCaseName")
-            .caseTypeOfApplication("C100")
-            .applicantSolicitorEmailAddress("test@test.com")
-            .applicants(listOfApplicants)
-            .respondents(listOfRespondents)
-            .children(listOfChildren)
-            .courtName("testcourt")
-            .build();
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("applicantSolicitorEmailAddress", "test@test.com");
-
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(caseData.getId())
-            .data(data)
-            .build();
-        UserDetails userDetails = UserDetails.builder()
-            .forename("userFirst")
-            .surname("userLast")
-            .build();
-        String applicantNames = "TestFirst TestLast";
-
-        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-
-        EmailTemplateVars email = ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseData.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
-            .applicantName(applicantNames)
-            .courtName(court.getCourtName())
-            .caseLink("/dummyURL")
-            .build();
-
-        manageOrderEmailService.sendEmailToApplicantAndRespondent(caseDetails);
-        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
-    }
-
-
-
-    @Test
-    public void sendEmailNotificationToFL401_ApplicantAndRespondents() {
-        applicant = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .email("applicant@tests.com")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        respondent = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .email("respondent@tests.com")
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().value(applicant).build();
-        List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
-
-        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().value(respondent).build();
-        List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
-
-        List<LiveWithEnum> childLiveWithList = new ArrayList<>();
-        childLiveWithList.add(LiveWithEnum.applicant);
-
-        Child child = Child.builder()
-            .childLiveWith(childLiveWithList)
-            .build();
-
-        String childNames = "child1 child2";
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .applicantCaseName("TestCaseName")
-            .caseTypeOfApplication("FL401")
-            .applicantSolicitorEmailAddress("test@test.com")
-            .applicants(listOfApplicants)
-            .applicantsFL401(PartyDetails.builder()
-                    .lastName("test")
-                                 .firstName("test1")
-                                 .email("test@ree.com").build())
-            .respondents(listOfRespondents)
-            .respondentsFL401(PartyDetails.builder()
-                    .lastName("test")
-                                  .firstName("test1")
-                                  .email("test@sdsc.com").build())
-            .children(listOfChildren)
-            .courtName("testcourt")
-            .build();
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("applicantSolicitorEmailAddress", "test@test.com");
-
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(caseData.getId())
-            .data(data)
-            .build();
-        UserDetails userDetails = UserDetails.builder()
-            .forename("userFirst")
-            .surname("userLast")
-            .build();
-        String applicantNames = "TestFirst TestLast";
-
-        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-
-        EmailTemplateVars email = ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseData.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
-            .applicantName(applicantNames)
-            .courtName(court.getCourtName())
-            .caseLink("/dummyURL")
-            .build();
-
-        manageOrderEmailService.sendEmailToApplicantAndRespondent(caseDetails);
-        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
-    }
-
-
-    @Test
-    public void sendEmailNotificationFinalOrderToCA_ApplicantAndRespondents() {
-        applicant = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .email("applicant@tests.com")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        respondent = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .email("respondent@tests.com")
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().value(applicant).build();
-        List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
-
-        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().value(respondent).build();
-        List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
-
-        List<LiveWithEnum> childLiveWithList = new ArrayList<>();
-        childLiveWithList.add(LiveWithEnum.applicant);
-
-        Child child = Child.builder()
-            .childLiveWith(childLiveWithList)
-            .build();
-
-        String childNames = "child1 child2";
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .applicantCaseName("TestCaseName")
-            .caseTypeOfApplication("C100")
-            .applicantSolicitorEmailAddress("test@test.com")
-            .applicants(listOfApplicants)
-            .respondents(listOfRespondents)
-            .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
-            .children(listOfChildren)
-            .courtName("testcourt")
-            .build();
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("applicantSolicitorEmailAddress", "test@test.com");
-
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(caseData.getId())
-            .data(data)
-            .build();
-        UserDetails userDetails = UserDetails.builder()
-            .forename("userFirst")
-            .surname("userLast")
-            .build();
-        String applicantNames = "TestFirst TestLast";
-
-        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-
-        EmailTemplateVars email = ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseData.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
-            .applicantName(applicantNames)
-            .courtName(court.getCourtName())
-            .caseLink("/dummyURL")
-            .build();
-
-        manageOrderEmailService.sendEmailToApplicantAndRespondent(caseDetails);
-        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
-    }
-
-    @Test
-    public void sendEmailNotificationToFinalOrderFL401_ApplicantAndRespondents() {
-        applicant = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .email("applicant@tests.com")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-
-            .solicitorEmail("test@test.com")
-            .build();
-
-        respondent = PartyDetails.builder()
-            .firstName("TestFirst")
-            .lastName("TestLast")
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .email("respondent@tests.com")
-            .isEmailAddressConfidential(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .solicitorEmail("test@test.com")
-            .build();
-
-        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().value(applicant).build();
-        List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
-
-        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().value(respondent).build();
-        List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
-
-        List<LiveWithEnum> childLiveWithList = new ArrayList<>();
-        childLiveWithList.add(LiveWithEnum.applicant);
-
-        Child child = Child.builder()
-            .childLiveWith(childLiveWithList)
-            .build();
-
-        String childNames = "child1 child2";
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .applicantCaseName("TestCaseName")
-            .caseTypeOfApplication("FL401")
-            .applicantSolicitorEmailAddress("test@test.com")
-            .applicants(listOfApplicants)
-            .applicantsFL401(PartyDetails.builder()
-                                 .lastName("test")
-                                 .firstName("test1").build())
-            .respondents(listOfRespondents)
-            .respondentsFL401(PartyDetails.builder()
-                                  .solicitorEmail("")
-                                  .representativeLastName("")
-                                  .representativeFirstName("")
-                                  .lastName("test")
-                                  .firstName("test1").build())
-            .children(listOfChildren)
-            .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
-            .courtName("testcourt")
-            .build();
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("applicantSolicitorEmailAddress", "test@test.com");
-
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(caseData.getId())
-            .data(data)
-            .build();
-        UserDetails userDetails = UserDetails.builder()
-            .forename("userFirst")
-            .surname("userLast")
-            .build();
-        String applicantNames = "TestFirst TestLast";
-
-        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-
-        EmailTemplateVars email = ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseData.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
-            .applicantName(applicantNames)
-            .courtName(court.getCourtName())
-            .caseLink("/dummyURL")
-            .build();
-
-        manageOrderEmailService.sendEmailToApplicantAndRespondent(caseDetails);
-        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
-    }
-
-    @Test
     public void verifyEmailNotificationTriggeredForFinalOrderIssued() throws  Exception {
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1196,58 +865,238 @@ public class ManageOrderEmailServiceTest {
     }
 
     @Test
-    public void testSendEmailWhenOrderServed() throws IOException {
-        CaseDetails caseDetails = CaseDetails.builder().build();
-        DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement
-            .builder()
-            .code("00000000-0000-0000-0000-000000000000")
-            .build();
-        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
-            .value(List.of(dynamicMultiselectListElement))
-            .build();
-        caseData = caseData.toBuilder()
-            .caseTypeOfApplication("C100")
-            .issueDate(LocalDate.now())
-            .othersToNotify(List.of(Element.<PartyDetails>builder().id(uuid)
-                                        .value(PartyDetails.builder()
-                                                                       .canYouProvideEmailAddress(YesOrNo.Yes)
-                                                                       .email("test")
-                                                                       .build()).build()))
-            .manageOrders(ManageOrders.builder()
-                                 .cafcassCymruServedOptions(YesOrNo.Yes)
-                                 .cafcassEmailAddress(List.of(element("test")))
-                                 .serveToRespondentOptions(YesOrNo.No)
-                                 .recipientsOptions(dynamicMultiSelectList)
-                              .serveOrderDynamicList(dynamicMultiSelectList)
-                              .serveOtherPartiesCA(List.of(OtherOrganisationOptions.anotherOrganisation))
-                              .deliveryByOptionsCA(DeliveryByEnum.email)
-                              .emailInformationCA(List.of(Element.<EmailInformation>builder()
-                                                              .id(uuid)
-                                                              .value(EmailInformation
-                                                                                                        .builder()
-                                                                                                        .emailAddress("test")
-                                                                                                        .build())
-                                                              .build()))
-                              .otherParties(dynamicMultiSelectList)
-                              .serveOrderDynamicList(dynamicMultiSelectList)
-                                                         .build())
-            .orderCollection(List.of(Element.<OrderDetails>builder()
-                                         .id(uuid)
-                                         .value(OrderDetails.builder().serveOrderDetails(ServeOrderDetails.builder().additionalDocuments(
-                                                 List.of(element(Document.builder().build()))).build())
-                                                    .typeOfOrder("Final").build())
-                                         .build()))
-            .build();
+    public void testServeOrdersToOtherOrganisation() {
+        PostalInformation address = PostalInformation.builder()
+                .postalAddress(Address.builder()
+                .addressLine1("Made Up Street").build())
+                .postalName("Test")
+                .build();
+        Element<PostalInformation> wrappedAddress = Element.<PostalInformation>builder()
+                .id(uuid)
+                .value(address).build();
+        List<Element<PostalInformation>> listOfAddress = Collections.singletonList(wrappedAddress);
+
+        OrderDetails orderDetails = OrderDetails.builder()
+                .orderTypeId("abc")
+                .dateCreated(LocalDateTime.now())
+                .orderDocument(englishOrderDoc)
+                .orderDocumentWelsh(welshOrderDoc)
+                .typeOfOrder("Final")
+                .serveOrderDetails(ServeOrderDetails.builder()
+                        .additionalDocuments(List.of(element(additionalOrderDoc)))
+                        .otherPartiesServed(YesOrNo.Yes)
+                        .postalInformation(listOfAddress)
+                        .build())
+                .build();
+
+        caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .state(State.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                .manageOrders(ManageOrders.builder()
+                        .serveOrderDynamicList(dynamicMultiSelectList)
+                        .build())
+                .orderCollection(List.of(element(uuid,orderDetails)))
+                .build();
+
         Map<String, Object> dataMap = new HashMap<>();
-        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-        doNothing().when(sendgridService).sendEmailUsingTemplateWithAttachments(any(SendgridEmailTemplateNames.class),
-                                                                                anyString(),
-                                                                                any(SendgridEmailConfig.class));
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
 
-        Mockito.verify(emailService,Mockito.times(1)).send(Mockito.anyString(),
-                                                           Mockito.any(),
-                                                           Mockito.any(),Mockito.any());
+        assertNotNull(dataMap.get("orderCollection"));
+    }
+
+    @Test
+    public void testServeOrdersToOtherOrganisationThrowsException() throws Exception {
+        PostalInformation address = PostalInformation.builder()
+                .postalAddress(Address.builder()
+                        .addressLine1("Made Up Street").build())
+                .postalName("Test")
+                .build();
+        Element<PostalInformation> wrappedAddress = Element.<PostalInformation>builder()
+                .id(uuid)
+                .value(address).build();
+        List<Element<PostalInformation>> listOfAddress = Collections.singletonList(wrappedAddress);
+
+        OrderDetails orderDetails = OrderDetails.builder()
+                .orderTypeId("abc")
+                .dateCreated(LocalDateTime.now())
+                .orderDocument(englishOrderDoc)
+                .orderDocumentWelsh(welshOrderDoc)
+                .typeOfOrder("Final")
+                .serveOrderDetails(ServeOrderDetails.builder()
+                        .additionalDocuments(List.of(element(additionalOrderDoc)))
+                        .otherPartiesServed(YesOrNo.Yes)
+                        .postalInformation(listOfAddress)
+                        .build())
+                .build();
+
+        caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .state(State.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                .manageOrders(ManageOrders.builder()
+                        .serveOrderDynamicList(dynamicMultiSelectList)
+                        .build())
+                .orderCollection(List.of(element(uuid,orderDetails)))
+                .build();
+
+        when(serviceOfApplicationPostService.getCoverLetter(caseData,"testAuth", address.getPostalAddress(),"Test"))
+                .thenThrow(new RuntimeException());
+
+        Map<String, Object> dataMap = new HashMap<>();
+
+        manageOrderEmailService.sendEmailWhenOrderIsServed("testAuth", caseData, dataMap);
+        assertNotNull(dataMap.get("orderCollection"));
+    }
+
+    @Test
+    public void testServeOrdersToOtherOrganisationServeOrderDetailsNull() {
+        PostalInformation address = PostalInformation.builder()
+                .postalAddress(Address.builder()
+                        .addressLine1("Made Up Street").build())
+                .postalName("Test")
+                .build();
+        Element<PostalInformation> wrappedAddress = Element.<PostalInformation>builder()
+                .id(uuid)
+                .value(address).build();
+
+        OrderDetails orderDetails = OrderDetails.builder()
+                .orderTypeId("abc")
+                .dateCreated(LocalDateTime.now())
+                .orderDocument(englishOrderDoc)
+                .orderDocumentWelsh(welshOrderDoc)
+                .typeOfOrder("Final")
+                .build();
+
+        caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .state(State.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                .manageOrders(ManageOrders.builder()
+                        .serveOrderDynamicList(dynamicMultiSelectList)
+                        .build())
+                .orderCollection(List.of(element(uuid,orderDetails)))
+                .build();
+
+        Map<String, Object> dataMap = new HashMap<>();
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+
+        assertNotNull(dataMap.get("orderCollection"));
+    }
+
+    @Test
+    public void testServeOrdersToOtherOrganisationAddressIsEmpty() {
+        PostalInformation address = PostalInformation.builder()
+                .postalName("Test")
+                .build();
+        Element<PostalInformation> wrappedAddress = Element.<PostalInformation>builder()
+                .id(uuid)
+                .value(address).build();
+        List<Element<PostalInformation>> listOfAddress = Collections.singletonList(wrappedAddress);
+
+        OrderDetails orderDetails = OrderDetails.builder()
+                .orderTypeId("abc")
+                .dateCreated(LocalDateTime.now())
+                .orderDocument(englishOrderDoc)
+                .orderDocumentWelsh(welshOrderDoc)
+                .serveOrderDetails(ServeOrderDetails.builder()
+                        .additionalDocuments(List.of(element(additionalOrderDoc)))
+                        .otherPartiesServed(YesOrNo.Yes)
+                        .postalInformation(listOfAddress)
+                        .build())
+                .build();
+
+        caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .state(State.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                .manageOrders(ManageOrders.builder()
+                        .serveOrderDynamicList(dynamicMultiSelectList)
+                        .serveToRespondentOptions(YesOrNo.No)
+                        .build())
+                .orderCollection(List.of(element(uuid,orderDetails)))
+                .build();
+
+        Map<String, Object> dataMap = new HashMap<>();
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+
+        assertNotNull(dataMap.get("orderCollection"));
+    }
+
+    @Test
+    public void testServeOrdersToOtherOrganisationPostalInformationIsEmpty() {
+        PostalInformation address = PostalInformation.builder()
+                .postalName("Test")
+                .postalAddress(Address.builder().build())
+                .build();
+        Element<PostalInformation> wrappedAddress = Element.<PostalInformation>builder()
+                .id(uuid)
+                .value(address).build();
+        List<Element<PostalInformation>> listOfAddress = Collections.singletonList(wrappedAddress);
+
+        OrderDetails orderDetails = OrderDetails.builder()
+                .orderTypeId("abc")
+                .dateCreated(LocalDateTime.now())
+                .orderDocument(englishOrderDoc)
+                .orderDocumentWelsh(welshOrderDoc)
+                .serveOrderDetails(ServeOrderDetails.builder()
+                        .additionalDocuments(List.of(element(additionalOrderDoc)))
+                        .otherPartiesServed(YesOrNo.Yes)
+                        .postalInformation(listOfAddress)
+                        .build())
+                .build();
+
+        caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .state(State.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                .manageOrders(ManageOrders.builder()
+                        .serveOrderDynamicList(dynamicMultiSelectList)
+                        .build())
+                .orderCollection(List.of(element(uuid,orderDetails)))
+                .build();
+
+        Map<String, Object> dataMap = new HashMap<>();
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+
+        assertNotNull(dataMap.get("orderCollection"));
+    }
+
+    @Test
+    public void testServeOrdersDetailsNull() {
+        OrderDetails orderDetails = OrderDetails.builder()
+                .orderTypeId("abc")
+                .dateCreated(LocalDateTime.now())
+                .orderDocument(englishOrderDoc)
+                .orderDocumentWelsh(welshOrderDoc)
+                .serveOrderDetails(ServeOrderDetails.builder()
+                        .additionalDocuments(List.of(element(additionalOrderDoc)))
+                        .otherPartiesServed(YesOrNo.Yes)
+                        .build())
+                .build();
+
+        caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .state(State.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                .manageOrders(ManageOrders.builder()
+                        .serveOrderDynamicList(dynamicMultiSelectList)
+                                  .serveToRespondentOptions(YesOrNo.Yes)
+                                  .servingRespondentsOptionsCA(SoaSolicitorServingRespondentsEnum.applicantLegalRepresentative)
+                        .build())
+                .orderCollection(List.of(element(uuid,orderDetails)))
+                .build();
+
+        Map<String, Object> dataMap = new HashMap<>();
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+
+        assertNotNull(dataMap.get("orderCollection"));
     }
 
     @Test
@@ -1272,6 +1121,11 @@ public class ManageOrderEmailServiceTest {
                               .cafcassCymruServedOptions(YesOrNo.Yes)
                               .cafcassEmailAddress(List.of(element("test")))
                               .serveToRespondentOptions(YesOrNo.No)
+                              .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                                                       .serveByPostOrEmail(DeliveryByEnum.email)
+                                                                       .emailInformation(EmailInformation.builder()
+                                                                                             .emailAddress("test").build())
+                                                                       .build())))
                               .recipientsOptions(dynamicMultiSelectList)
                               .serveOrderDynamicList(dynamicMultiSelectList)
                               .serveOtherPartiesCA(List.of(OtherOrganisationOptions.anotherOrganisation))
@@ -1300,9 +1154,7 @@ public class ManageOrderEmailServiceTest {
                                                                                 any(SendgridEmailConfig.class));
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
 
-        Mockito.verify(emailService,Mockito.times(1)).send(Mockito.anyString(),
-                                                           Mockito.any(),
-                                                           Mockito.any(),Mockito.any());
+        Mockito.verifyNoInteractions(emailService);
     }
 
     @Test
@@ -1333,6 +1185,11 @@ public class ManageOrderEmailServiceTest {
                               .serveToRespondentOptions(YesOrNo.No)
                               .recipientsOptions(dynamicMultiSelectList)
                               .serveOrderDynamicList(dynamicMultiSelectList)
+                              .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                                                       .serveByPostOrEmail(DeliveryByEnum.email)
+                                                                       .emailInformation(EmailInformation.builder()
+                                                                                             .emailAddress("test").build())
+                                                                       .build())))
                               .serveOtherPartiesCA(List.of(OtherOrganisationOptions.anotherOrganisation))
                               .deliveryByOptionsCA(DeliveryByEnum.email)
                               .emailInformationCA(List.of(Element.<EmailInformation>builder()
@@ -1363,10 +1220,7 @@ public class ManageOrderEmailServiceTest {
                                                                                 anyString(),
                                                                                 any(SendgridEmailConfig.class));
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
-
-        Mockito.verify(emailService,Mockito.times(1)).send(Mockito.anyString(),
-                                                           Mockito.any(),
-                                                           Mockito.any(),Mockito.any());
+        Mockito.verifyNoInteractions(emailService);
     }
 
 
@@ -1394,6 +1248,11 @@ public class ManageOrderEmailServiceTest {
                               .serveToRespondentOptions(YesOrNo.No)
                               .recipientsOptions(dynamicMultiSelectList)
                               .serveOrderDynamicList(dynamicMultiSelectList)
+                              .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                                                       .serveByPostOrEmail(DeliveryByEnum.email)
+                                                                       .emailInformation(EmailInformation.builder()
+                                                                                             .emailAddress("test").build())
+                                                                       .build())))
                               .serveOtherPartiesCA(List.of(OtherOrganisationOptions.anotherOrganisation))
                               .deliveryByOptionsCA(DeliveryByEnum.email)
                               .emailInformationCA(List.of(Element.<EmailInformation>builder()
@@ -1420,9 +1279,7 @@ public class ManageOrderEmailServiceTest {
                                                                                 any(SendgridEmailConfig.class));
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
 
-        Mockito.verify(emailService,Mockito.times(1)).send(Mockito.anyString(),
-                                                           Mockito.any(),
-                                                           Mockito.any(),Mockito.any());
+        Mockito.verifyNoInteractions(emailService);
     }
 
 
@@ -1464,7 +1321,7 @@ public class ManageOrderEmailServiceTest {
 
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
 
-        Mockito.verify(emailService,Mockito.times(2)).send(Mockito.anyString(),
+        Mockito.verify(emailService,Mockito.times(1)).send(Mockito.anyString(),
                                                            Mockito.any(),
                                                            Mockito.any(),Mockito.any());
     }
@@ -1514,7 +1371,7 @@ public class ManageOrderEmailServiceTest {
 
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
 
-        Mockito.verify(emailService,Mockito.times(3)).send(Mockito.anyString(),
+        Mockito.verify(emailService,Mockito.times(2)).send(Mockito.anyString(),
                                                            Mockito.any(),
                                                            Mockito.any(),Mockito.any());
     }
@@ -1582,13 +1439,13 @@ public class ManageOrderEmailServiceTest {
 
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
 
-        Mockito.verify(emailService,Mockito.times(2)).send(Mockito.anyString(),
+        Mockito.verify(emailService,Mockito.times(1)).send(Mockito.anyString(),
                                                            Mockito.any(),
                                                            Mockito.any(),Mockito.any());
     }
 
     @Test
-    public void testSendEmailWhenOrderServedFl401() {
+    public void testSendEmailWhenOrderServedFl401() throws IOException {
         CaseDetails caseDetails = CaseDetails.builder().build();
         DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement
             .builder()
@@ -1597,6 +1454,13 @@ public class ManageOrderEmailServiceTest {
         DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
             .value(List.of(dynamicMultiselectListElement))
             .build();
+        DynamicMultiselectListElement serveOrderDynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code(uuid.toString())
+                .build();
+        DynamicMultiSelectList serveOrderDynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(serveOrderDynamicMultiselectListElement))
+                .build();
         applicant = applicant.toBuilder()
             .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
             .representativeLastName("")
@@ -1610,13 +1474,164 @@ public class ManageOrderEmailServiceTest {
             .issueDate(LocalDate.now())
             .manageOrders(ManageOrders.builder().cafcassServedOptions(YesOrNo.Yes)
                               .serveToRespondentOptions(YesOrNo.No)
+                              .serveOrderDynamicList(serveOrderDynamicMultiSelectList)
+                              .serveOtherPartiesDA(List.of(ServeOtherPartiesOptions.other))
+                              .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                                                         .serveByPostOrEmail(DeliveryByEnum.post)
+                                                                         .emailInformation(EmailInformation.builder()
+                                                                                               .emailAddress("test").build())
+                                                                         .postalInformation(PostalInformation.builder()
+                                                                                                .postalAddress(Address.builder().build())
+                                                                                              .build())
+                                                                         .build())))
                               .recipientsOptions(dynamicMultiSelectList)
                               .cafcassEmailId("test").build())
             .build();
         Map<String, Object> dataMap = new HashMap<>();
 
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
-        Mockito.verify(emailService,Mockito.times(2)).send(Mockito.any(), any(), any(), any());
+        Mockito.verify(sendgridService,Mockito.times(1))
+            .sendEmailUsingTemplateWithAttachments(Mockito.any(), any(), any());
+    }
+
+    @Test
+    public void testSendEmailWhenOrderServedFl401ServeOtherPartiesDaNull() throws IOException {
+        CaseDetails caseDetails = CaseDetails.builder().build();
+        DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code("00000000-0000-0000-0000-000000000000")
+                .build();
+        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(dynamicMultiselectListElement))
+                .build();
+        DynamicMultiselectListElement serveOrderDynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code(uuid.toString())
+                .build();
+        DynamicMultiSelectList serveOrderDynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(serveOrderDynamicMultiselectListElement))
+                .build();
+        applicant = applicant.toBuilder()
+                .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+                .representativeLastName("")
+                .representativeFirstName("")
+                .solicitorEmail("test@gmail.com")
+                .build();
+        caseData = caseData.toBuilder()
+                .caseTypeOfApplication("Fl401")
+                .applicantsFL401(applicant)
+                .respondentsFL401(applicant)
+                .issueDate(LocalDate.now())
+                .manageOrders(ManageOrders.builder().cafcassServedOptions(YesOrNo.Yes)
+                        .serveToRespondentOptions(YesOrNo.No)
+                        .serveOrderDynamicList(serveOrderDynamicMultiSelectList)
+                        .serveOtherPartiesDA(null)
+                        .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                .serveByPostOrEmail(DeliveryByEnum.email)
+                                .emailInformation(EmailInformation.builder()
+                                        .emailAddress("test").build())
+                                .build())))
+                        .recipientsOptions(dynamicMultiSelectList)
+                        .cafcassEmailId("test").build())
+                .build();
+        Map<String, Object> dataMap = new HashMap<>();
+
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+        Mockito.verify(sendgridService,Mockito.times(1))
+            .sendEmailUsingTemplateWithAttachments(Mockito.any(), any(), any());
+    }
+
+    @Test
+    public void testSendEmailWhenOrderServedFl40ServeOtherPartiesNotSetToOther() throws IOException {
+        CaseDetails caseDetails = CaseDetails.builder().build();
+        DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code("00000000-0000-0000-0000-000000000000")
+                .build();
+        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(dynamicMultiselectListElement))
+                .build();
+        DynamicMultiselectListElement serveOrderDynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code(uuid.toString())
+                .build();
+        DynamicMultiSelectList serveOrderDynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(serveOrderDynamicMultiselectListElement))
+                .build();
+        applicant = applicant.toBuilder()
+                .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+                .representativeLastName("")
+                .representativeFirstName("")
+                .solicitorEmail("test@gmail.com")
+                .build();
+        caseData = caseData.toBuilder()
+                .caseTypeOfApplication("Fl401")
+                .applicantsFL401(applicant)
+                .respondentsFL401(applicant)
+                .issueDate(LocalDate.now())
+                .manageOrders(ManageOrders.builder().cafcassServedOptions(YesOrNo.Yes)
+                        .serveToRespondentOptions(YesOrNo.No)
+                        .serveOrderDynamicList(serveOrderDynamicMultiSelectList)
+                        .serveOtherPartiesDA(List.of())
+                        .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                .serveByPostOrEmail(DeliveryByEnum.email)
+                                .emailInformation(EmailInformation.builder()
+                                        .emailAddress("test").build())
+                                .build())))
+                        .recipientsOptions(dynamicMultiSelectList)
+                        .cafcassEmailId("test").build())
+                .build();
+        Map<String, Object> dataMap = new HashMap<>();
+
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+        Mockito.verify(sendgridService,Mockito.times(1))
+            .sendEmailUsingTemplateWithAttachments(Mockito.any(), any(), any());
+    }
+
+    @Test
+    public void testSendEmailWhenOrderServed() {
+        CaseDetails caseDetails = CaseDetails.builder().build();
+        DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code("00000000-0000-0000-0000-000000000000")
+                .build();
+        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(dynamicMultiselectListElement))
+                .build();
+        DynamicMultiselectListElement serveOrderDynamicMultiselectListElement = DynamicMultiselectListElement
+                .builder()
+                .code(uuid.toString())
+                .build();
+        DynamicMultiSelectList serveOrderDynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(serveOrderDynamicMultiselectListElement))
+                .build();
+        applicant = applicant.toBuilder()
+                .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+                .representativeLastName("")
+                .representativeFirstName("")
+                .solicitorEmail("test@gmail.com")
+                .build();
+        caseData = caseData.toBuilder()
+                .caseTypeOfApplication("")
+                .applicantsFL401(applicant)
+                .respondentsFL401(applicant)
+                .issueDate(LocalDate.now())
+                .manageOrders(ManageOrders.builder().cafcassServedOptions(YesOrNo.Yes)
+                        .serveToRespondentOptions(YesOrNo.No)
+                        .serveOrderDynamicList(serveOrderDynamicMultiSelectList)
+                        .serveOtherPartiesDA(List.of(ServeOtherPartiesOptions.other))
+                        .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder()
+                                .serveByPostOrEmail(DeliveryByEnum.email)
+                                .emailInformation(EmailInformation.builder()
+                                        .emailAddress("test").build())
+                                .build())))
+                        .recipientsOptions(dynamicMultiSelectList)
+                        .cafcassEmailId("test").build())
+                .build();
+        Map<String, Object> dataMap = new HashMap<>();
+
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+        Mockito.verify(emailService,Mockito.times(0)).send(Mockito.any(), any(), any(), any());
     }
 
 
@@ -1746,8 +1761,211 @@ public class ManageOrderEmailServiceTest {
     }
 
     @Test
-    public void sendEmailWhenOrderIsServedOnly47a() {
+    public void sendEmailWhenOrderIsServedOnly47aNoOptionsSelected() {
+        applicant = PartyDetails.builder()
+                .firstName("TestFirst")
+                .lastName("TestLast")
+                .email("applicant@tests.com")
+                .canYouProvideEmailAddress(YesOrNo.Yes)
+                .isEmailAddressConfidential(YesOrNo.No)
+                .isAddressConfidential(YesOrNo.No)
+                .solicitorEmail("test@test.com")
+                .build();
 
+        respondent = PartyDetails.builder()
+                .firstName("TestFirst")
+                .lastName("TestLast")
+                .canYouProvideEmailAddress(YesOrNo.Yes)
+                .email("respondent@tests.com")
+                .isEmailAddressConfidential(YesOrNo.No)
+                .isAddressConfidential(YesOrNo.No)
+                .solicitorEmail("test@test.com")
+                .build();
+        uuid = UUID.fromString(TEST_UUID);
+        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().id(uuid).value(applicant).build();
+        List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
+
+        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().id(uuid).value(respondent).build();
+        List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
+
+        List<LiveWithEnum> childLiveWithList = new ArrayList<>();
+        childLiveWithList.add(LiveWithEnum.applicant);
+
+        Child child = Child.builder()
+                .childLiveWith(childLiveWithList)
+                .build();
+
+        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
+        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
+
+        String cafcassEmail = "testing@cafcass.com";
+
+        Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
+        List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
+
+        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(DynamicMultiselectListElement.builder()
+                        .label("John (Child 1)")
+                        .code("00000000-0000-0000-0000-000000000000")
+                        .build())).build();
+        ManageOrders manageOrders = ManageOrders.builder()
+            .serveToRespondentOptions(YesOrNo.No)
+            .recipientsOptions(dynamicMultiSelectList)
+            .serveOrderDynamicList(dynamicMultiSelectList)
+            .serveOtherPartiesCA(List.of(OtherOrganisationOptions.anotherOrganisation))
+            .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder().serveByPostOrEmail(DeliveryByEnum.email)
+                                                       .emailInformation(EmailInformation.builder().emailName("").build())
+                                                       .build())))
+            .otherParties(dynamicMultiSelectList)
+            .build();
+
+        childLiveWithList.add(LiveWithEnum.applicant);
+
+        CaseData caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .applicantSolicitorEmailAddress("test@test.com")
+                .applicants(listOfApplicants)
+                .respondents(listOfRespondents)
+                .children(listOfChildren)
+                .courtName("testcourt")
+                .manageOrders(manageOrders)
+                .issueDate(LocalDate.now())
+                .orderCollection(List.of(element(OrderDetails.builder().build())))
+                .build();
+
+        Map<String, Object> dataMap = new HashMap<>();
+        dataMap.put("applicantSolicitorEmailAddress", "test@test.com");
+
+        CaseDetails caseDetails = CaseDetails.builder()
+                .id(caseData.getId())
+                .data(dataMap)
+                .build();
+        UserDetails userDetails = UserDetails.builder()
+                .forename("userFirst")
+                .surname("userLast")
+                .build();
+        String applicantNames = "TestFirst TestLast";
+
+        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
+
+        EmailTemplateVars email = ManageOrderEmail.builder()
+                .caseReference(String.valueOf(caseData.getId()))
+                .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
+                .applicantName(applicantNames)
+                .courtName(court.getCourtName())
+                .caseLink("/dummyURL")
+                .build();
+
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
+    }
+
+    @Test
+    public void sendEmailWhenOrderIsServedOnly47a() {
+        applicant = PartyDetails.builder()
+                .firstName("TestFirst")
+                .lastName("TestLast")
+                .email("applicant@tests.com")
+                .canYouProvideEmailAddress(YesOrNo.Yes)
+                .isEmailAddressConfidential(YesOrNo.No)
+                .isAddressConfidential(YesOrNo.No)
+                .solicitorEmail("test@test.com")
+                .build();
+
+        respondent = PartyDetails.builder()
+                .firstName("TestFirst")
+                .lastName("TestLast")
+                .canYouProvideEmailAddress(YesOrNo.Yes)
+                .email("respondent@tests.com")
+                .isEmailAddressConfidential(YesOrNo.No)
+                .isAddressConfidential(YesOrNo.No)
+                .solicitorEmail("test@test.com")
+                .build();
+        uuid = UUID.fromString(TEST_UUID);
+        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().id(uuid).value(applicant).build();
+        List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
+
+        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().id(uuid).value(respondent).build();
+        List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
+
+        List<LiveWithEnum> childLiveWithList = new ArrayList<>();
+        childLiveWithList.add(LiveWithEnum.applicant);
+
+        Child child = Child.builder()
+                .childLiveWith(childLiveWithList)
+                .build();
+
+        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
+        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
+
+        String cafcassEmail = "testing@cafcass.com";
+
+        Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
+        List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
+
+        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
+                .value(List.of(DynamicMultiselectListElement.builder()
+                        .label("John (Child 1)")
+                        .code("00000000-0000-0000-0000-000000000000")
+                        .build())).build();
+        ManageOrders manageOrders = ManageOrders.builder()
+                .serveToRespondentOptions(YesOrNo.No)
+                .recipientsOptions(dynamicMultiSelectList)
+                .serveOrderDynamicList(dynamicMultiSelectList)
+                .serveOtherPartiesCA(List.of())
+                .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder().serveByPostOrEmail(DeliveryByEnum.email)
+                        .emailInformation(EmailInformation.builder().emailName("").build())
+                        .build())))
+                .otherParties(dynamicMultiSelectList)
+                .build();
+
+        childLiveWithList.add(LiveWithEnum.applicant);
+
+        CaseData caseData = CaseData.builder()
+                .id(12345L)
+                .applicantCaseName("TestCaseName")
+                .caseTypeOfApplication("C100")
+                .applicantSolicitorEmailAddress("test@test.com")
+                .applicants(listOfApplicants)
+                .respondents(listOfRespondents)
+                .children(listOfChildren)
+                .courtName("testcourt")
+                .manageOrders(manageOrders)
+                .issueDate(LocalDate.now())
+                .orderCollection(List.of(element(OrderDetails.builder().build())))
+                .build();
+
+        Map<String, Object> dataMap = new HashMap<>();
+        dataMap.put("applicantSolicitorEmailAddress", "test@test.com");
+
+        CaseDetails caseDetails = CaseDetails.builder()
+                .id(caseData.getId())
+                .data(dataMap)
+                .build();
+        UserDetails userDetails = UserDetails.builder()
+                .forename("userFirst")
+                .surname("userLast")
+                .build();
+        String applicantNames = "TestFirst TestLast";
+
+        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
+
+        EmailTemplateVars email = ManageOrderEmail.builder()
+                .caseReference(String.valueOf(caseData.getId()))
+                .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
+                .applicantName(applicantNames)
+                .courtName(court.getCourtName())
+                .caseLink("/dummyURL")
+                .build();
+
+        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
+        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
+    }
+
+    @Test
+    public void sendEmailWhenOrderIsServedEmailOptionIsEmpty() throws IOException {
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
             .lastName("TestLast")
@@ -1767,11 +1985,11 @@ public class ManageOrderEmailServiceTest {
             .isAddressConfidential(YesOrNo.No)
             .solicitorEmail("test@test.com")
             .build();
-        uuid = UUID.fromString(TEST_UUID);
-        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().id(uuid).value(applicant).build();
+
+        Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().value(applicant).build();
         List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
 
-        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().id(uuid).value(respondent).build();
+        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder().value(respondent).build();
         List<Element<PartyDetails>> listOfRespondents = Collections.singletonList(wrappedRespondents);
 
         List<LiveWithEnum> childLiveWithList = new ArrayList<>();
@@ -1780,145 +1998,59 @@ public class ManageOrderEmailServiceTest {
         Child child = Child.builder()
             .childLiveWith(childLiveWithList)
             .build();
-
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
 
-        String cafcassEmail = "testing@cafcass.com";
-
-        Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
-        List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
 
         DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
-            .value(List.of(DynamicMultiselectListElement.builder()
-                               .label("John (Child 1)")
-                               .code("00000000-0000-0000-0000-000000000000")
-                               .build())).build();
+                .value(List.of(DynamicMultiselectListElement.builder()
+                        .label("John (Child 1)")
+                        .code(TEST_UUID)
+                        .build())).build();
         ManageOrders manageOrders = ManageOrders.builder()
-            .serveToRespondentOptionsOnlyC47a(YesOrNo.No)
-            .recipientsOptionsOnlyC47a(dynamicMultiSelectList)
-            .serveOrderDynamicList(dynamicMultiSelectList)
-            .serveOtherPartiesCaOnlyC47a(List.of(OtherOrganisationOptions.anotherOrganisation))
-            .deliveryByOptionsCaOnlyC47a(DeliveryByEnum.email)
-            .emailInformationCaOnlyC47a(List.of(Element.<EmailInformation>builder()
-                                            .id(uuid)
-                                            .value(EmailInformation
-                                                       .builder()
-                                                       .emailAddress("test")
-                                                       .build())
-                                            .build()))
-            .otherPartiesOnlyC47a(dynamicMultiSelectList)
-            .build();
-
-        childLiveWithList.add(LiveWithEnum.applicant);
+                .serveToRespondentOptions(YesOrNo.No)
+                .recipientsOptions(dynamicMultiSelectList)
+                .serveOrderDynamicList(dynamicMultiSelectList)
+                .serveOtherPartiesDA(List.of(ServeOtherPartiesOptions.other))
+                .serveOrgDetailsList(List.of(element(ServeOrgDetails.builder().serveByPostOrEmail(DeliveryByEnum.email)
+                        .emailInformation(EmailInformation.builder().emailName("").build())
+                        .build())))
+                .otherParties(dynamicMultiSelectList)
+                .build();
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .applicantCaseName("TestCaseName")
-            .caseTypeOfApplication("C100")
+            .caseTypeOfApplication("FL401")
             .applicantSolicitorEmailAddress("test@test.com")
             .applicants(listOfApplicants)
+            .applicantsFL401(PartyDetails.builder()
+                                 .lastName("test")
+                                 .firstName("test1")
+                                 .solicitorEmail("t")
+                                 .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+                                 .email("test@ree.com").build())
             .respondents(listOfRespondents)
+            .respondentsFL401(PartyDetails.builder()
+                                  .lastName("test")
+                                  .firstName("test1")
+                                  .email("test@sdsc.com").build())
             .children(listOfChildren)
+            .orderCollection(List.of(element(UUID.fromString(TEST_UUID),OrderDetails.builder().build())))
             .courtName("testcourt")
             .manageOrders(manageOrders)
-            .issueDate(LocalDate.now())
-            .orderCollection(List.of(element(OrderDetails.builder().build())))
             .build();
-
         Map<String, Object> dataMap = new HashMap<>();
         dataMap.put("applicantSolicitorEmailAddress", "test@test.com");
 
         CaseDetails caseDetails = CaseDetails.builder()
-            .id(caseData.getId())
-            .data(dataMap)
-            .build();
-        UserDetails userDetails = UserDetails.builder()
-            .forename("userFirst")
-            .surname("userLast")
-            .build();
+                .id(caseData.getId())
+                .data(dataMap)
+                .build();
         String applicantNames = "TestFirst TestLast";
 
         when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-
-        EmailTemplateVars email = ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseData.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
-            .applicantName(applicantNames)
-            .courtName(court.getCourtName())
-            .caseLink("/dummyURL")
-            .build();
-
         manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
-        assertEquals("test@test.com", caseDetails.getData().get("applicantSolicitorEmailAddress").toString());
-    }
-
-    @Test
-    public void testSendEmailWhenOrderServedC100() throws Exception {
-        CaseDetails caseDetails = CaseDetails.builder().build();
-        LocalDateTime now = LocalDateTime.of(2023,8, 23, 0, 0, 0);
-        DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement
-            .builder()
-            .code("00000000-0000-0000-0000-000000000000")
-            .build();
-        DynamicMultiSelectList dynamicMultiSelectList = DynamicMultiSelectList.builder()
-            .value(List.of(dynamicMultiselectListElement))
-            .build();
-        DynamicMultiselectListElement serveOrderDynamicMultiselectListElement = DynamicMultiselectListElement
-            .builder()
-            .code("00000000-0000-0000-0000-000000000000")
-            .build();
-        DynamicMultiSelectList serveOrderDynamicMultiSelectList = DynamicMultiSelectList.builder()
-            .value(List.of(serveOrderDynamicMultiselectListElement))
-            .build();
-        applicant = applicant.toBuilder()
-            .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
-            .representativeLastName("")
-            .representativeFirstName("")
-            .solicitorEmail("")
-            .build();
-        PartyDetails respondent = applicant.toBuilder()
-            .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
-            .representativeLastName("")
-            .representativeFirstName("")
-            .solicitorEmail("")
-            .user(User.builder().idamId("abc123").build())
-            .contactPreferences(ContactPreferences.post)
-            .build();
-        OrderDetails orderDetails = OrderDetails.builder()
-            .orderTypeId("abc")
-            .dateCreated(now)
-            .orderDocument(Document.builder().build())
-            .orderDocumentWelsh(Document.builder().build())
-            .serveOrderDetails(ServeOrderDetails.builder()
-                                   .additionalDocuments(List.of(element(Document.builder().build())))
-                                   .build())
-            .build();
-        caseData = caseData.toBuilder()
-            .caseTypeOfApplication("C100")
-            .applicants(List.of(Element.<PartyDetails>builder().id(uuid).value(applicant).build()))
-            .respondents(List.of(Element.<PartyDetails>builder().id(uuid).value(respondent).build()))
-            .issueDate(LocalDate.now())
-            .manageOrders(ManageOrders.builder().cafcassServedOptions(YesOrNo.Yes)
-                              .serveToRespondentOptions(YesOrNo.No)
-                              .recipientsOptions(dynamicMultiSelectList)
-                              .serveOrderDynamicList(serveOrderDynamicMultiSelectList)
-                              .serveOrderAdditionalDocuments(List.of(element(Document.builder().build())))
-                              .cafcassEmailId("test").build())
-            .orderCollection(List.of(element(uuid,orderDetails)))
-            .build();
-        when(emailService.getCaseData(caseDetails)).thenReturn(caseData);
-        when(serviceOfApplicationPostService
-                 .getCoverLetterGeneratedDocInfo(any(CaseData.class), anyString(),
-                                                 any(Address.class),
-                                                 anyString()
-                 )).thenReturn(GeneratedDocumentInfo.builder().build());
-        Map<String, Object> dataMap = new HashMap<>();
-
-        manageOrderEmailService.sendEmailWhenOrderIsServed("tesAuth", caseData, dataMap);
-
-        Mockito.verify(emailService,Mockito.times(2)).send(Mockito.anyString(),
-                                                           Mockito.any(),
-                                                           Mockito.any(),Mockito.any());
+        verify(sendgridService, times(2)).sendEmailUsingTemplateWithAttachments(Mockito.any(), Mockito.any(), Mockito.any());
     }
 }
